k8s/01_statefulset.yaml
#WPPConnect Server-Cli: StatefulSet para Deploy
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: server-cli
spec:
  serviceName: wppconnect
  replicas: 2
  selector:
    matchLabels:
      app: server-cli
  template:
    metadata:
      labels:
        app: server-cli
    spec:
      containers:
        - name: server-cli
          image: wppconnect/server-cli:latest
          command: ["/bin/sh", "-c"]
          args:
            ["wppserver --secretKey My53cr3tKY --port 21465 --startAllSession"]
          volumeMounts:
            - mountPath: /home/tokens
              name: server-cli-volume
          ports:
            - containerPort: 21465
          imagePullPolicy: Always

          resources:
            requests:
              cpu: "0.5"
              memory: "500Mi"
            limits:
              cpu: "0.5"
              memory: "1Gi"

          startupProbe:
            httpGet:
              path: /healthz
              port: 21465 #porta do container
            periodSeconds: 3
            failureThreshold: 60

          readinessProbe:
            httpGet:
              path: /healthz
              port: 21465 #porta do container
            periodSeconds: 3
            failureThreshold: 1

          livenessProbe:
            httpGet:
              path: /healthz
              port: 21465 #porta do container
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1

  volumeClaimTemplates:
    - metadata:
        name: server-cli-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
#WPPConnect Server-Cli: Criação do Service
apiVersion: v1
kind: Service
metadata:
  name: wppconnect
spec:
  selector:
    app: server-cli
  type: ClusterIP
  ports:
    - name: wppconnect
      port: 80
      targetPort: 21465
